// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryClient fetchSummary with calendar aligned and timeslices SLO returns the summary 1`] = `
Object {
  "groupings": Object {},
  "meta": Object {},
  "summary": Object {
    "errorBudget": Object {
      "consumed": 0.19842,
      "initial": 0.05,
      "isEstimated": false,
      "remaining": 0.80158,
    },
    "fiveMinuteBurnRate": 0.5,
    "oneDayBurnRate": 0.7,
    "oneHourBurnRate": 0.6,
    "sliValue": 0.990079,
    "status": "HEALTHY",
  },
}
`;

exports[`SummaryClient fetchSummary with rolling and occurrences SLO returns the summary 1`] = `
Object {
  "groupings": Object {},
  "meta": Object {},
  "summary": Object {
    "errorBudget": Object {
      "consumed": 100,
      "initial": 0.001,
      "isEstimated": false,
      "remaining": -99,
    },
    "fiveMinuteBurnRate": 0.5,
    "oneDayBurnRate": 0.7,
    "oneHourBurnRate": 0.6,
    "sliValue": 0.9,
    "status": "VIOLATED",
  },
}
`;

exports[`SummaryClient fetchSummary with rolling and timeslices SLO returns the summary 1`] = `
Object {
  "groupings": Object {},
  "meta": Object {},
  "summary": Object {
    "errorBudget": Object {
      "consumed": 0.19842,
      "initial": 0.05,
      "isEstimated": false,
      "remaining": 0.80158,
    },
    "fiveMinuteBurnRate": 0.5,
    "oneDayBurnRate": 0.7,
    "oneHourBurnRate": 0.6,
    "sliValue": 0.990079,
    "status": "HEALTHY",
  },
}
`;
